--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,11 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: wasm32-unknown-unknown
-
+          
+      - name: RUSTUP
+        run: |
+          rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
+          
       - name: Check and test
         run: |
           cargo fmt --all --check
